--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -7,7 +7,7 @@
       <!-- Left side -->
       <div class="col-xs-12 col-md-4">
         <div class="event card payment-card">
-          <%= link_to client_event_path(@event.id) do %>
+          <%= link_to client_event_path(@event.to_url) do %>
             <% if @event.galleries.present? %>
               <div class="cover" style="background-image: url(<%= @event.galleries.first.try(:media, :thumb) %>);"></div>
             <% else %>
@@ -18,7 +18,7 @@
             <div class="row">
               <div class="col-xs-12">
                 <h4 class="title text-left">
-                  <%= link_to @event.title, client_event_path(@event.id) %>
+                  <%= link_to @event.title, client_event_path(@event.to_url) %>
                 </h4>
                 <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @section.event_time.strftime("%A %d %B, %H:%M") %></div>
                 <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location %></div>
@@ -50,7 +50,7 @@
 
       <!-- Right side -->
       <div class="col-xs-12 col-md-8">
-        <%= form_tag client_event_checkout_path(@event.id), id: :checkout do  %>
+        <%= form_tag client_event_checkout_path(@event.to_url), id: :checkout do  %>
           <input type="hidden" name="event_id" value="<%= @event.id %>" />
           <div class="form-section highlight" id="general-info-section">
             <div class="form-section-header">
@@ -131,7 +131,7 @@
                 <div class="form-group col-xs-12 col-md-6" style="clear: left;">
                   <label>E-mail</label>
                   <input class="form-control" type="email" name="email" value="" />
-                </div>                
+                </div>
                 <div class="form-group col-xs-12 col-md-6">
                   <label>Password</label>
                   <input class="form-control" type="password" name="password" value="" />
