--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -39,7 +39,7 @@
     <div class="row event-list">
       <% @events.each do |event| %>
         <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %> event-category-<%= category.id %><% end %>">
-          <a class="event card" href="<%= client_event_path(event.id) %>">
+          <a class="event card" href="<%= client_event_path(event.to_url) %>">
             <div class="cover" style="background-image: url(<%= event.get_thumbnail %>);"></div>
             <div class="info">
               <h4 class="title text-left"><%= event.title %></h4>
