--- a/app/views/client/events/payment-credit-card.html.erb
+++ b/app/views/client/events/payment-credit-card.html.erb
@@ -3,7 +3,7 @@
 <div class="section" id="credit-card-inform-section">
   <div class="container">
     <h2>Payment Completed</h2>
-    <div>You have bought tickets for <%= link_to @event.title, client_event_path(@event.id) %></div>
+    <div>You have bought tickets for <%= link_to @event.title, client_event_path(@event.to_url) %></div>
     <div>We have sent you all information to your email.</div>
     <br />
     <div>Invite your friend <a href="#">Daydash Referral Program</a></div>
@@ -20,7 +20,7 @@
       <% @related_events.each do |event| %>
         <div class="col-sm-6 col-md-4">
           <div class="event card">
-            <%= link_to client_event_path(event.id) do %>
+            <%= link_to client_event_path(event.to_url) do %>
               <% if event.galleries.present? %>
                 <div class="cover" style="background-image: url(<%= event.galleries.first.try(:media, :thumb) %>);"></div>
               <% else %>
@@ -29,7 +29,7 @@
             <% end %>
             <div class="info">
               <h4 class="title text-left">
-                <%= link_to event.title, client_event_path(event.id) %>
+                <%= link_to event.title, client_event_path(event.to_url) %>
               </h4>
               <div class="meta date"><i class="icon icon-xs icon-calendar"></i> วันเสาร์ ที่ 22 สิงหาคม, 8:00 PM</div>
               <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> Thonglor House Club, ซอยทองหล่อ</div>
