--- a/app/views/organizer/events/edit.html.erb
+++ b/app/views/organizer/events/edit.html.erb
@@ -26,7 +26,7 @@
                 <% @categories.each do |category| %>
                 <div class="col-xs-12 col-md-6">
                   <label class="category">
-                    <input type="checkbox" name="categorie_ids[]" value="<%= category.id %>" <% if @event.categories.where(:id => category.id).exists? %>checked<% end %> />
+                    <input type="checkbox" name="category_ids[]" value="<%= category.id %>" <% if @event.categories.where(:id => category.id).exists? %>checked<% end %> />
                     <%= category.title %>
                   </label>
                 </div>
@@ -93,13 +93,13 @@
                   <div class="input-group datepicker">
                     <input type="text" class="form-control" name="ticket[<%= section[:id] %>][date]" value="<%= section[:date] %>" />
                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                  </div>                  
+                  </div>
                 </td>
                 <td width="200">
                   <div class="input-group timepicker">
                     <input class="form-control" type="text" name="ticket[<%= section[:id] %>][start_time]" value="<%= section[:start_time] %>" />
                     <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
-                  </div>                  
+                  </div>
                 <td width="200">
                   <div class="input-group timepicker">
                     <input class="form-control" type="text" name="ticket[<%= section[:id] %>][end_time]" value="<%= section[:end_time] %>" />
@@ -151,13 +151,13 @@
       <div class="input-group datepicker">
         <input type="text" class="form-control" name="new_ticket_dates[]" />
         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-      </div>                  
+      </div>
     </td>
     <td width="200">
       <div class="input-group timepicker">
         <input class="form-control" type="text" name="new_ticket_start_times[]" value="" />
         <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
-      </div>                  
+      </div>
     <td width="200">
       <div class="input-group timepicker">
         <input class="form-control" type="text" name="new_ticket_end_times[]" value="" />
@@ -210,7 +210,7 @@
     $('.ticket-list tbody').append(element);
 
     init_datetimepicker(element);
-    
+
     return false;
   }
 
