sample policy and terms

--- a/app/views/greetings/terms.html.erb
+++ b/app/views/greetings/terms.html.erb
@@ -1,1 +1,20 @@
-Terms and Conditions
+<h1>Terms of Service</h1>
+<h2>ข้อตกลงการใช้บริการแอพพลิเคชั่น Daydash</h2>
+<p>ข้อกำหนดและเงื่อนไขทั้งหมดในเอกสารฉบับนี้ใช้บังคับสำหรับการที่ท่านเข้าใช้แอพพลิเคชั่นทางโทรศัพท์มือถือและเว็บไซต์ ของ Daydash ซึ่งรวมถึงเนื้อหา การใช้เงิน และการให้บริการทั้งหมดบน Daydash Mobile App (“แอพ”)
+การใช้แอพ  สร้างบัญชีผู้ใช้งาน หรือคลิกยอมรับข้อตกลงการใช้งานของเรา จะถือว่าท่านยอมรับที่จะปฏิบัติตาม และอยู่ภายใต้ข้อตกลง รวมถึงยอมรับนโยบายการเป็นส่วนตัวที่เรากำหนด ท่านจะไม่สามารถใช้บริการแอพพลิเคชั่นของเราได้ หากท่านไม่เห็นด้วยกับข้อตกลง หรือนโยบายความเป็นส่วนตัวดังกล่าว
+ทางบริษัทขอสงวนสิทธิในการแก้ไขหรือเปลี่ยนแปลงข้อกำหนดการใช้ นโยบาย หรือคู่มือใดๆ ของแอพพลิเคชั่นตลอดเวลา ซึ่งการแก้ไขหรือเปลี่ยนแปลงดังกล่าวจะมีผลทันทีเมื่อมีการประกาศฉบับแก้ไขลงในแอพพลิเคชั่น และท่านตกลงสละสิทธิใด ๆ ที่อาจมีในการรับทราบคำบอกกล่าวเกี่ยวกับการแก้ไขเปลี่ยนแปลงดังกลาว ดังนั้น หากท่านไม่เห็นด้วยกับการแก้ไขเปลี่ยนแปลงดังกล่าว กรุณาหยุดการเข้าใช้แอพพลิเคชั่น</p>
+
+<h2>ศัพท์สำคัญ</h2>
+<b>สินค้า</b> <p>คือ อีเว้นท์ หรือ กิจกรรม  หรือ แพ็คเกจการให้บริการทุกชนิดที่อยู่บน Daydash</p>
+<b>ผู้จัด</b> <p>คือผู้จัดกิจกรรม หรือ อีเว้นท์  ซึ่งอาจจะเป็นบุคคล กลุ่มคน ร้านค้า หรือ บริษัท ที่ให้บริการบน Daydash และตกลงยอมรับตามข้อกำหนดของ Daydash</p>
+<b>ผู้ซื้อ</b> <p>คือผู้ที่ซื้อตั๋วเข้าร่วมบน Daydash และตกลงยอมรับตามข้อกำหนดของ Daydash</p>
+<b>ผู้ใช้</b> <p>คือผู้ที่เข้ามาสู่แอพพลิเคชั่นของ Daydash  และใช้บริการของ Daydash  ซึ่งรวมถึงผู้จัด และผู้ซื้อด้วย</p>
+
+<h2>การลงทะเบียนและบัญชีผู้ใช้งาน</h2>
+<p>บริษัทขอสงวนสิทธิให้เฉพาะผู้ใช้งานที่ลงทะเบียนเพื่อสร้างบัญชีกับแอพพลิเคชั่นของบริษัทที่จะสามารถสั่งซื้อสินค้า ใช้บริการ และร่วมทำกิจกรรมต่างๆ ที่จัดให้มีในแอพพลิเคชั่น อาทิ การสั่งซื้อสินค้า หรือการเข้าร่วมสนุกกับกิจกรรมต่างๆ เป็นต้น เมื่อท่านตกลงสร้างบัญชี ให้ถือว่าท่านตกลงดังต่อไปนี้
+</p>
+
+<h2>ข้อจำกัดการใช้งาน
+</h2>
+<p>ในการใช้งานแอพพลิเคชั่นนี้ ท่านจะดำเนินการภายใต้กฎหมาย ระเบียบ และข้อบังคับที่เกี่ยวข้อง และตกลงดังต่อไปนี้
+</p>
