--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -52,19 +52,21 @@
       <div class="col-xs-12 col-md-8">
         <%= form_tag client_event_checkout_path(@event.to_url), id: :checkout do  %>
           <input type="hidden" name="event_id" value="<%= @event.id %>" />
-          <div class="form-section highlight" id="general-info-section">
-            <div class="form-section-header">
-              <h2 class="form-section-title">Quick Checkout</h2>
-              <div class="form-section-description">
-                ซื้อตั๋วผ่าน Facebook Login ในคลิกเดียว
+          <% if current_user.nil? %>
+            <div class="form-section highlight" id="general-info-section">
+              <div class="form-section-header">
+                <h2 class="form-section-title">Quick Checkout</h2>
+                <div class="form-section-description">
+                  ซื้อตั๋วผ่าน Facebook Login ในคลิกเดียว
+                </div>
+              </div>
+              <div class="form-section-body">
+                <div class="form-section-description">
+                  <a href="/auth/facebook"><img src="/src/images/theme/fb-login.png" height="40" /></a>
+                </div>
               </div>
             </div>
-            <div class="form-section-body">
-              <div class="form-section-description">
-                <a href="/auth/facebook"><img src="/src/images/theme/fb-login.png" height="40" /></a>
-              </div>
-            </div>
-          </div>
+          <% end %>
           <div class="form-section" id="general-info-section">
             <div class="form-section-header">
               <h2 class="form-sectiont-title">Checkout with E-mail</h2>
@@ -78,15 +80,15 @@
               <div class="row">
                 <div class="form-group col-xs-12 col-md-6">
                   <label>Firstname</label>
-                  <input class="form-control" type="text" name="firstname" value="" />
+                  <input class="form-control" type="text" name="firstname" value="<%= current_user.first_name %>" />
                 </div>
                 <div class="form-group col-xs-12 col-md-6">
                   <label>Lastname</label>
-                  <input class="form-control" type="text" name="lastname" value="" />
+                  <input class="form-control" type="text" name="lastname" value="<%= current_user.last_name %>" />
                 </div>
                 <div class="form-group col-xs-12 col-md-6">
                   <label>Phone Number</label>
-                  <input class="form-control" type="text" name="phone" value="" />
+                  <input class="form-control" type="text" name="phone" value="<%= current_user.phone %>" />
                 </div>
                 <div class="form-group dob-form-group col-xs-12 col-md-6">
                   <label>Date of Birth</label>
@@ -94,19 +96,19 @@
                     <select class="form-control" name="dob_date">
                       <option value="">Date</option>
                       <% (1..31).each do |date| %>
-                      <option value="<%= date %>"><%= date %></option>
+                        <option <%= "selected" if current_user.birthday.try(:day) == date %> value="<%= date %>"><%= date %></option>
                       <% end %>
                     </select>
                     <select class="form-control" name="dob_month">
                       <option value="">Month</option>
                       <% (1..12).each do |month| %>
-                      <option value="<%= month %>"><%= month %></option>
+                        <option <%= "selected" if current_user.birthday.try(:month) == month %> value="<%= month %>"><%= month %></option>
                       <% end %>
                     </select>
                     <select class="form-control" name="dob_year">
                       <option value="">Year</option>
                       <% (0..99).each do |year| %>
-                      <option value="<%= (Time.now.year - year) %>"><%= (Time.now.year - year) %></option>
+                        <option <%= "selected" if current_user.birthday.try(:year) == (Time.zone.now.year - year) %> value="<%= (Time.zone.now.year - year) %>"><%= (Time.zone.now.year - year) %></option>
                       <% end %>
                     </select>
                   </div>
@@ -115,12 +117,12 @@
                   <label>Gender</label>
                   <div class="form-inline">
                     <label class="radio">
-                      <input type="radio" name="gender" value="female" />
-                      Female
+                      <input type="radio" name="gender" value="male" <%= "checked" if current_user.gender == "male" %> />
+                      Male
                     </label>
                     <label class="radio">
-                      <input type="radio" name="gender" value="male" />
-                      Male
+                      <input type="radio" name="gender" value="female" <%= "checked" if current_user.gender == "female" %> />
+                      Female
                     </label>
                     <label class="radio">
                       <input type="radio" name="gender" value="not_specify" />
@@ -130,7 +132,7 @@
                 </div>
                 <div class="form-group col-xs-12 col-md-6" style="clear: left;">
                   <label>E-mail</label>
-                  <input class="form-control" type="email" name="email" value="" />
+                  <input class="form-control" type="email" name="email" value="<%= current_user.email %>" />
                 </div>
                 <div class="form-group col-xs-12 col-md-6">
                   <label>Password</label>
