--- a/app/views/management/events/_section_datas.html.erb
+++ b/app/views/management/events/_section_datas.html.erb
@@ -8,10 +8,10 @@
             <%= f.text_field :section_name, multiple: true, class: 'form-control', placeholder: 'Up to 50 Characters', autofocus: true, required: true, value: s.title %>
           </div>
           <div class="col-sm-2">
-            <%= f.text_field :section_avaliable, multiple: true, class: 'form-control', placeholder: 'Section avaliable', autofocus: true, required: true, "data-parsley-type": "number", "data-parsley-maxlength": "7", value: s.avaliable %>
+            <%= f.text_field :section_available, multiple: true, class: 'form-control', placeholder: 'Section available', autofocus: true, required: true, "data-parsley-type": "number", "data-parsley-maxlength": "7", value: s.available %>
           </div>
           <div class="col-sm-2">
-            <%= f.text_field :section_price, multiple: true, class: 'form-control', placeholder: 'in THB', autofocus: true, required: true, "data-parsley-type": "number", "data-parsley-maxlength": "7", value: s.avaliable %>
+            <%= f.text_field :section_price, multiple: true, class: 'form-control', placeholder: 'in THB', autofocus: true, required: true, "data-parsley-type": "number", "data-parsley-maxlength": "7", value: s.available %>
           </div>
         </div>
 
