--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @section.event_time.strftime("%A %d %B, %H:%M") %></div>
-            <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location %></div>
+            <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location_name %></div>
           </div>
         </div>
         <div class="description">
