--- a/app/views/management/events/edit.html.erb
+++ b/app/views/management/events/edit.html.erb
@@ -37,7 +37,7 @@
             <div class="form-group">
               <%= f.label :location, class: 'col-sm-2 control-label' %>
               <div class="col-sm-6">
-                <%= f.text_field :location, class: 'form-control', autofocus: true, required: true, placeholder: 'ชื่อสถานที่, ถนน, ซอย'  %>
+                <%= f.text_field :location_name, class: 'form-control', autofocus: true, required: true, placeholder: 'ชื่อสถานที่, ถนน, ซอย'  %>
               </div>
             </div>
 
