--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -53,7 +53,7 @@
         <%= form_tag client_event_checkout_path(@event.to_url), id: :checkout do  %>
           <input type="hidden" name="event_id" value="<%= @event.id %>" />
           <input type="hidden" name="omise_token">
-          <input type="hidden" name="payment_method">
+          <input type="hidden" name="payment_method" value="credit_card">
 
           <% if current_user.nil? %>
             <div class="form-section highlight" id="general-info-section">
@@ -240,37 +240,28 @@
 <script type="text/javascript"> //Init Function
 
 $(document).ready(function() {
-  init_payment_method_nav();
   init_form_validate();
 });
 
-function init_payment_method_nav() {
-
-}
-
 function init_form_validate() {
-  Omise.setPublicKey("pkey_test_54rvq6seh8u6mkyxhuh");
 
   $("#checkout").submit(function () {
     var form = $(this);
 
-    // Disable the submit button to avoid repeated click.
     form.find("input[type=submit]").prop("disabled", true);
-
-
-    if(payment_method == 'credit_card') {
-      return omise_submit(form);
+    if(form.find("[name=payment_method]").val() == 'credit_card') {
+      omise_submit(form);
+      return false;
     }
     else {
-      //Bank Transfer
       return true;
     }
-
   });
 }
 
 function omise_submit(form) {
-  // Serialize the form fields into a valid card object.
+  Omise.setPublicKey("pkey_test_54rvq6seh8u6mkyxhuh");
+
   var card = {
     "name": form.find("[data-omise=holder_name]").val(),
     "number": form.find("[data-omise=number]").val(),
@@ -279,34 +270,21 @@ function omise_submit(form) {
     "security_code": form.find("[data-omise=security_code]").val()
   };
 
-  // Send a request to create a token then trigger the callback function once
-  // a response is received from Omise.
-  //
-  // Note that the response could be an error and this needs to be handled within
-  // the callback.
   Omise.createToken("card", card, function (statusCode, response) {
     if (response.object == "error") {
-      // Display an error message.
       $("#token_errors").html(response.message);
 
-      // Re-enable the submit button.
       form.find("input[type=submit]").prop("disabled", false);
     } else {
-      // Then fill the omise_token.
       form.find("[name=omise_token]").val(response.id);
       form.find("[name=payment_method]").val(form.find("[data-btn=payment-method]").val());
 
-      // Remove card number from form before submiting to server.
       form.find("[data-omise=number]").val("");
       form.find("[data-omise=security_code]").val("");
 
-      // submit token to server.
       form.get(0).submit();
     };
   });
-
-  // Prevent the form from being submitted;
-  return false;
 }
 </script>
 
